WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144076
[iOS] Caret does not line up with text when using the system font
https://bugs.webkit.org/show_bug.cgi?id=144076
Summary
[iOS] Caret does not line up with text when using the system font
Myles C. Maxfield
Reported
2015-04-22 16:04:40 PDT
[iOS] Caret does not line up with text when using the system font
Attachments
Patch
(5.75 KB, patch)
2015-04-22 16:11 PDT
,
Myles C. Maxfield
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-04-22 16:11:36 PDT
Created
attachment 251379
[details]
Patch
Enrica Casucci
Comment 2
2015-04-22 16:15:33 PDT
Comment on
attachment 251379
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=251379&action=review
Looks good.
> Source/WebCore/ChangeLog:10 > + the complext text codepath must know about custom tracking.
typo complex
> Source/WebCore/platform/graphics/mac/SimpleFontDataCoreText.cpp:55 > + CFDictionarySetValue(mutableAttributes, kCTFontAttributeName, platformData().ctFont());
I would change this code to CFDictionarySetValue(mutableAttributes, kCTFontAttributeName, hasCustomTracking() ? platformData().font() : platformData().ctFont());
Myles C. Maxfield
Comment 3
2015-04-22 16:23:58 PDT
Committed
r183153
: <
http://trac.webkit.org/changeset/183153
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug